# worldx-ucra

./: .gitignore  .gitmodules  CMakeLists.txt  test_ucra_renderconfig  test_ucra_renderconfig.c
.github/instructions/: memory.instructions.md
.github/prompts/: iterate-task.toolsets.jsonc  proceed-next-task.prompt.md
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
.windsurf/: mcp.json
.windsurf/rules/: memory.md
src/: main.cpp  world_wrapper.c  world_wrapper.h
src/cli/: main.c
src/worldcache/: test_worldcache_header.c  test_worldcache_manager.c  test_worldcache_serialize.c  worldcache_format.c  worldcache_format.h  worldcache_manager.c  worldcache_manager.h  worldcache_serialize.c  worldcache_serialize.h
